--- a/init.org
+++ b/init.org
@@ -1469,9 +1469,10 @@ alternatively, Evince can also be used with ~P~:
  '(("P" ivy-bibtex-open-pdf-external "Open PDF file in external viewer (if present)")))
 #+END_SRC
 
-Add =keywords=, =journal= and =booktitle= to fields to be searched;
-additional PDFs (starting with BibTeX key) are also detected;
-fields to be displayed: PDF, author, title, year, and
+Add =keywords=, =journal= and =booktitle= to fields to be searched
+(=author=, =editor=, =title=, =year=, BibTeX =key=, and entry type by
+default); additional PDFs (starting with BibTeX key) are also
+detected; fields to be displayed: PDF, author, title, year, and
 journal/booktitle/type:
 
 #+BEGIN_SRC emacs-lisp
@@ -1504,7 +1505,7 @@ Finally, =ivy-bibtex= is bound to ~C-c b~:
 
 In BibTeX mode (e.g. when opening and editing the main bibliography),
 new entries are created with ~C-c C-e~, like ~C-c C-e C-a~ for
-articles, ~C-c C-e C-t~ for technical reports, and ~C-c C-e C-b~ for
+articles, ~C-c C-e C-t~ for technical reports, and ~C-c C-e b~ for
 books.  When the point is on an entry, pressing ~C-j~ moves to the next
 field.  ~C-c C-c~ checks and cleans the entry at point (including
 generation of key if it does not exist, alignment, etc.). If necessary
@@ -1525,8 +1526,9 @@ mode is available [[http://www.jonathanleroux.org/bibtex-mode.html][here]].
       (if (assoc "timestamp" (bibtex-parse-entry))
           (message "timestamp already exists!")
         (bibtex-make-field '("timestamp" nil current-date) t nil))
-      (if (assoc "timestamp" (bibtex-parse-entry))
-          (message "timestamp already exists!")
+      (bibtex-beginning-of-entry)
+      (if (assoc "owner" (bibtex-parse-entry))
+          (message "owner already exists!")
         (bibtex-make-field '("owner" nil user-login-name) t nil))
       ))
   (setq
@@ -1698,6 +1700,8 @@ buffer (bound to ~C-x C-i~):
               (load-library "rfmt-emacs")
               (local-set-key (kbd "C-x C-i") 'rfmt-buffer)))
 #+END_SRC
+
+CHECK STYLER!
 
 In an ESS inferior buffer, use ~C-l~ to send commands directly to the
 subshell ([[https://stat.ethz.ch/pipermail/ess-help/2010-July/006202.html][useful for =screen= for instance]]):
